re PR rtl-optimization/28634 (rounding problem with -fdelayed-branch on hppa/mips)

gcc/
	PR rtl-optimization/28634
	* reorg.c (fill_slots_from_thread): Do not assume A + X - X == A
	for floating-point modes unless flag_unsafe_math_optimizations.

gcc/testsuite/
	PR rtl-optimization/28634
	* gcc.c-torture/execute/ieee/pr28634.c: New test.

From-SVN: r116124